# ado_local

./: .gitignore  README.md  project.md  pyproject.toml  sample-pipeline.yml  stages-conditionals-templates.md
ado_local/: __main__.py
ado_local/analysis/: analyzer.py
ado_local/cache/: task_cache.py  tool_cache.py
ado_local/cli/: app.py
ado_local/connections/: service_connections.py
ado_local/execution/: checkout.py  engine.py  task_runner.py  workspace.py
ado_local/logging/: ansi.py  command_parser.py
ado_local/models/: config.py  events.py  pipeline.py  task.py  variable.py
ado_local/parser/: expression.py  pipeline.py  template.py  variable_expander.py  yaml_loader.py
ado_local/prepare/: downloader.py
ado_local/tui/: app.py
samples/: README.md
samples/dotnet-console/: README.md  azure-pipelines.yml
samples/dotnet-console/src/HelloPipeline/: Program.cs
samples/dotnet-console/templates/: build-steps.yml  publish-steps.yml  test-steps.yml
