[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ado-local"
version = "0.1.0"
description = "Offline Azure DevOps Pipeline Runner"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.0",
    "textual>=0.52.0",
]

[project.scripts]
ado-local = "ado_local.cli.app:app"

[tool.setuptools.packages.find]
include = ["ado_local*"]
